<resources>
    <string name="app_name">Bottom</string>
    <string name="dialogTitle">Hello!</string>
    <string name="dialogText">This is bottom sheet text. Please press button to close this dialog.</string>
    <string name="dialogButtonText">Got it</string>
    <string name="show_bottom_sheet">Show Bottom Sheet</string>

    <string name="agreement_full_text">By pressing next button you confirm the agreement and privacy policy</string>
    <string name="confidential_info">agreement</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="go_to_next_fragment">Go to next fragment</string>
    <string name="camera">Camera</string>
    <string name="wrong_email">Wrong email format</string>
    <string name="nice_email">Correct email</string>
    <string name="open_login_page">Open Login page</string>
    <string name="email">Email</string>

</resources>