<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/agreementText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:drawablePadding="@dimen/padding_small"
        app:drawableTint="@color/black"
        app:drawableTopCompat="@android:drawable/ic_dialog_alert" />

    <Button
        android:id="@+id/showBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_bottom_sheet" />

    <Button
        android:id="@+id/openImageFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_next_fragment" />

    <Button
        android:id="@+id/openLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_login_page" />

</LinearLayout>